samples/_failures_safe/1761270752_8117d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d0e3b69.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_5d0e3b69.c:139:25: error: expected ‘)’ at end of input
  139 |             if (analyzer
      |                ~        ^
      |                         )
./samples/SAFE/__tmp_5d0e3b69.c:139:13: error: expected declaration or statement at end of input
  139 |             if (analyzer
      |             ^~
./samples/SAFE/__tmp_5d0e3b69.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5d0e3b69.c:139:13: error: expected declaration or statement at end of input
